tests/errors/error_call_nonfunction.nimmy
# Error: Calling something that isn't a function
let x = 42
x()